--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "bix",
   "version": "1.0.0",
   "description": "Blokaly Infomation Exchange",
-  "main": "./dist/main.js",
+  "main": "./dist/bix.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "start": "node ./dist/main.js",
+    "bix": "node ./dist/bix.js",
     "clean": "rm -r dist",
-    "bix": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +32,7 @@
     "bluebird": "^3.4.7",
     "bn.js": "^4.11.6",
     "bs58": "^4.0.0",
+    "colors": "^1.1.2",
     "ecdsa-sig-formatter": "^1.0.9",
     "elliptic": "^6.4.0",
     "eth-lightwallet": "^2.5.3",
@@ -42,7 +42,8 @@
     "meteor-random": "0.0.3",
     "moment": "^2.17.1",
     "multihashes": "^0.4.3",
-    "secp256k1": "^3.2.5"
+    "secp256k1": "^3.2.5",
+    "tracer": "^0.8.7"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
